--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
@@ -1,25 +1,25 @@
-<div class="row" *ngIf="customerVM">
-	<div class="col-sm-12">
+<div class="overview-right-body" *ngIf="customerVM">
+	<div>
 		<kbd>{{ 'Selected' | translate }}</kbd>
 	</div>
-	<div class="col-sm-12">
+	<div>
 		<h1>{{customerVM.customerNameString}}</h1>
 	</div>
-	<div class="col-sm-12">
+	<div>
 		<i class="fa fa-male" 
 			[ngClass]="{'fa-male': customerVM.customer.isIndividual(), 'fa-building': customerVM.customer.isCompany(), 'fa-automobile': customerVM.customer.isTravelAgency()}"></i> 
 		<small>{{customerVM.customerTypeString}}</small>
 	</div>
-	<div class="col-sm-12">
+	<div>
 		<i class="fa fa-home" [ngClass]=""></i> <small>{{customerVM.customerAddressString}}</small>
 	</div>
-	<div class="col-sm-12">
+	<div>
 		<i class="fa fa-phone"></i> <small>{{customerVM.phoneString}}</small>
 	</div>
-	<div class="col-sm-12">
+	<div>
 		<i class="fa fa-mail-reply"></i> <small>{{customerVM.emailString}}</small>
 	</div>
-	<div class="col-sm-12">
+	<div>
 		<a class="btn btn-lg" (click)="editCustomer()">
 			<i class="fa fa-pencil"></i> {{ 'Edit' | translate }}
 		</a>
