--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -1,5 +1,5 @@
 <div class="overview-left" [ngClass]="{'col-sm-9': !isEditing, 'col-sm-3': isEditing}">
-	<div class="row">
+	<div>
 		<ul class="nav nav-tabs">
 			<li [ngClass]="{active : areActivePriceProducts()}" *ngIf="!isEditing || areActivePriceProducts()">
 				<a (click)="viewActivePriceProducts()">{{ 'Active' | translate }}</a>
@@ -37,9 +37,7 @@
 		(onDraft)="draftPriceProduct($event)"
 		>
 	</price-product-overview>
-	<div class="row">
-		<wizard-steps-component></wizard-steps-component>
-	</div>
+	<wizard-steps-component></wizard-steps-component>
 	
 </div>
 <div class="col-sm-9 edit-container edit-container" *ngIf="isEditing">
