--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-overview/template/bed-overview.html
@@ -1,23 +1,23 @@
-<div class="row">
-    <div class="col-sm-12">
+<div class="overview-right-body">
+    <div>
         <span class="unitpal-font bed-icon-overview">{{bedVM.template.iconUrl}}</span>
     </div>
-    <div class="col-sm-12">
+    <div>
         <kbd>{{ 'Selected' | translate }}</kbd>
     </div>
-    <div class="col-sm-12">
+    <div>
         <h1>{{ bedVM.bed.name }}</h1>
     </div>
-    <div class="col-sm-12">
+    <div>
         <small>Accomodates {{ bedVM.bed.maxNoAdults }} <span class="unitpal-font">:</span> {{ bedVM.bed.maxNoChildren }} <span class="unitpal-font">;</span></small>
         <br/>
         <small>Size <i class="fa fa-arrows-h"></i> {{ bedVM.bed.size.lengthCm }} <i class="fa fa-arrows-v"> {{ bedVM.bed.size.widthCm }}</i></small>
     </div>
 
-    <div class="col-sm-12">
+    <div>
         <small>{{ bedVM.bed.notes }}</small>
     </div>
-    <div class="col-sm-12">
+    <div>
 		<a class="btn btn-lg" (click)="editBed()">
 			<i class="fa fa-pencil"></i> {{ 'Edit' | translate }}
 		</a>
