--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/customer-register/template/wizard-customer-register.html
@@ -1,4 +1,4 @@
-<div class="row card-header signup-step-07">
+<div class="row card-header">
 	<div class="col-sm-4">
 		<h1>{{ 'Customer Register' | translate }} &gt; 
 				<small *ngIf="!isEditScreen">{{ 'Overview' | translate }}</small>
