--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/rooms/template/wizard-rooms.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/rooms/template/wizard-rooms.html
@@ -1,4 +1,4 @@
-<div class="row card-header signup-step-05">
+<div class="row card-header">
 	<div class="col-sm-4">
 		<h1>{{ 'Rooms' | translate }} &gt; <small>{{ 'Overview' | translate }}</small></h1>
 	</div>
