[Front End] Bug - Refresh Count in Wizard - fixed

--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
@@ -15,5 +15,5 @@
 	</div>
 </div>
 <div class="row x_panel">
-	<add-on-products (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></add-on-products>
+	<add-on-products (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></add-on-products>
 </div>
