--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
@@ -12,5 +12,5 @@
 	</div>
 </div>
 <div class="row x_panel">
-	<beds (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></beds>
+	<beds (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></beds>
 </div>
