--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/price-products/template/wizard-price-products.html
@@ -15,5 +15,5 @@
 	</div>
 </div>
 <div class="row x_panel">
-	<price-products (onScreenStateTypeChanged)="didChangeScreenStateType($event)"></price-products>
+	<price-products (onScreenStateTypeChanged)="didChangeScreenStateType($event)" (onItemDeleted)="didDeleteItem($event)"></price-products>
 </div>
