Clean up bootstrap columns

--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
@@ -9,7 +9,7 @@
 		>
 	</lazy-loading-table>
 </div>
-<div class="col-sm-3 overview-right hidden-xs hidden-sm" *ngIf="!isEditing">
+<div class="col-sm-3 overview-right" *ngIf="!isEditing">
 	<add-on-product-overview 
 		*ngIf="selectedAddOnProductVM" 
 		[addOnProductVM]="selectedAddOnProductVM"
