--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -26,7 +26,7 @@
 		>
 	</lazy-loading-table>
 </div>
-<div class="col-sm-3 overview-right hidden-xs hidden-sm" *ngIf="!isEditing">
+<div class="col-sm-3 overview-right" *ngIf="!isEditing">
 	<price-product-overview 
 		*ngIf="selectedPriceProductVM" 
 		[priceProductVM]="selectedPriceProductVM"
