--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/beds/template/wizard-beds.html
@@ -1,11 +1,11 @@
 <div class="row card-header">
-	<div class="col-sm-4">
+	<div class="col-xs-4 col-md-4">
 		<h1>{{ 'Beds' | translate }} &gt; <small>{{ 'Overview' | translate }}</small></h1>
 	</div>
-	<div class="col-sm-6 description">
+	<div class="col-xs-6 col-md-6 description">
 		<small>{{ '[Wizard Step 2] Beds text' | translate }}</small>
 	</div>
-	<div class="col-sm-2 text-right">
+	<div class="col-xs-2 col-md-2 text-right">
 		<h1>{{ _bedsStateService.totalNoOfBeds }} <span class="unitpal-font">{{_bedsStateService.getMeta().iconFontName}}</span></h1>
 	</div>
 </div>
