--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/breakfast/template/wizard-breakfast.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/breakfast/template/wizard-breakfast.html
@@ -1,14 +1,14 @@
 <div class="row card-header">
-	<div class="col-sm-4">
+	<div class="col-xs-4 col-md-4">
 		<h1>{{ 'Breakfast' | translate }} &gt; 
 				<small *ngIf="!isEditScreen">{{ 'Overview' | translate }}</small>
 				<small *ngIf="isEditScreen">{{ 'Edit' | translate }}</small>
 			</h1>
 	</div>
-	<div class="col-sm-6 description">
+	<div class="col-xs-6 col-md-6 description">
 		<small>{{ '[Wizard Step 3] Breakfast text' | translate }}</small>
 	</div>
-	<div class="col-sm-2 text-right">
+	<div class="col-xs-2 col-md-2 text-right">
 		<h1>{{ _breakfastStateService.totalNoOfBreakfasts }} <span class="unitpal-font">{{ _breakfastStateService.getMeta().iconFontName }}</span></h1>
 	</div>
 </div>
