--- a/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
@@ -3,10 +3,10 @@
 </header>
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-md-2 wizard-nav">
+		<div class="col-xs-2 col-md-2 wizard-nav">
 			<wizard-navbar-component></wizard-navbar-component>
 		</div>
-		<div class="col-md-10 card signup-step" role="main">
+		<div class="col-xs-10 col-md-10 card signup-step" role="main">
 			<router-outlet></router-outlet>
 		</div>
 	</div>
