--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -22,6 +22,7 @@
 }
 
 body,html {
+    height: 100%;
     background: #9ac6f8;
     background: -moz-linear-gradient(-45deg,#9ac6f8 0%,#558bd0 50%,#2266b2 75%,#1d5899 100%);
     background: -webkit-linear-gradient(-45deg,#9ac6f8 0%,#558bd0 50%,#2266b2 75%,#1d5899 100%);
@@ -47,12 +48,6 @@ body,html {
 .card a:hover {
     color: #1E3A6A;
     cursor: pointer;
-}
-
-body,html {
-    height: 100%;
-    margin-bottom: -120px;
-    padding-bottom: 76px;
 }
 
 header {
@@ -103,7 +98,7 @@ header {
 
 .container-fluid {
     margin: 0 auto;
-    height: 100%;
+    height: calc(100% - 80px);
     padding: 20px 0;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -205,15 +200,15 @@ customer-register{
   left:0px;
   bottom: 0px;
   width: 100%;
-  height: 80px;
-  padding-top: 10px;
+  height: 82px;
+  padding-top: 12px;
 }
 
 .btn.btn-app {
     position: relative;
     padding-top: 12px;
-    width: 60px;
-    height: 60px;
+    width: 45px;
+    height: 45px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -224,8 +219,17 @@ customer-register{
     font-size: 12px;
 }
 
+.btn.btn-app > i {
+    top: -17px;
+    position: relative;
+}
+.wizard-pagination .btn-spaceing{
+    display: inline-block;
+    width: 10px;
+}
+
 .signup-step .btn.btn-app .fa {
-    font-size: 36px;
+    font-size: 55px;
 }
 
 .form-warning input:focus {
@@ -443,7 +447,7 @@ input[type="number"].form-control {
 /* 3angle TECH */
 
 .overview-right-body{
-    height: calc(100% - 80px);
+    height: calc(100% - 82px);
     overflow-y: scroll    
 }
 
@@ -471,40 +475,8 @@ input[type="number"].form-control {
 
 /* Theme structure */
 
-/*@media (max-height: 750px) {
-    .card-body {
-        height: 500px;
-    }
-}
-
-@media (min-height: 750px) {
-    .card-body {
-        height: 500px;
-    }
-}
-@media (min-height: 800px) {
-    .card-body {
-        height: 550px;
-    }
-}
-@media (min-height: 850px) {
-    .card-body {
-        height: 600px;
-    }
-}
-@media (min-height: 900px) {
-    .card-body {
-        height: 650px;
-    }
-}
-@media (min-height: 950px) {
-    .card-body {
-        height: 700px;
-    }
-}*/
-
 .edit-container {
-    height: 100%;
+    height: calc(100%);
     border-left: 1px solid #ccc;
     padding: 24px;    
     overflow-y: scroll;
