fixed image upload control

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -707,8 +707,13 @@ input[type="file"] {
     display: none;
 }
 
+.th-img-upload-container {
+    width:250px;
+}
+
 .th-img-upload-preview {
     width: 100%;
+    height: 150px;
     margin-bottom: 5px;
     text-align: center;
 }
