removed unnecessary placeholders

--- a/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/beds/pages/bed-edit/template/bed-edit.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-md-6">
             <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-                <input type="text" class="form-control" placeholder="{{ 'Bed Name' | translate }}" ngControl="name">
+                <input type="text" class="form-control" ngControl="name">
             </div>
             <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the bed' | translate }}</small></label>
         </div>
