--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/individual/template/individual-customer-details.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/customer-details/individual/template/individual-customer-details.html
@@ -5,7 +5,7 @@
 			<div class="form-group">
 				<label>{{ 'First Name' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('firstName')}">
-					<input type="text" class="form-control" placeholder="{{ 'First Name' | translate }}" ngControl="firstName">
+					<input type="text" class="form-control" ngControl="firstName">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the first name' | translate }}</small></label>
 			</div>
@@ -14,7 +14,7 @@
 			<div class="form-group">
 				<label>{{ 'Last Name' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('lastName')}">
-					<input type="text" class="form-control" placeholder="{{ 'Last Name' | translate }}" ngControl="lastName">
+					<input type="text" class="form-control" ngControl="lastName">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the last name' | translate }}</small></label>
 			</div>
@@ -23,7 +23,7 @@
 			<div class="form-group">
 				<label>{{ 'Passport Number' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('passportNo')}">
-					<input type="text" class="form-control" placeholder="{{ 'Passport Number' | translate }}" ngControl="passportNo">
+					<input type="text" class="form-control" ngControl="passportNo">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid passport number' | translate }}</small></label>
 			</div>
@@ -45,7 +45,7 @@
 			<div class="form-group">
 				<label>{{ 'City' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('city')}">
-					<input type="text" class="form-control" placeholder="{{ 'City' | translate }}" ngControl="city">
+					<input type="text" class="form-control" ngControl="city">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid city length' | translate }}</small></label>
 			</div>
@@ -56,7 +56,7 @@
 			<div class="form-group">
 				<label>{{ 'Address' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('streetAddress')}">
-					<input type="text" class="form-control" placeholder="{{ 'Address' | translate }}" ngControl="streetAddress">
+					<input type="text" class="form-control" ngControl="streetAddress">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid address length' | translate }}</small></label>
 			</div>
@@ -65,7 +65,7 @@
 			<div class="form-group">
 				<label>{{ 'Postal Code' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('postalCode')}">
-					<input type="text" class="form-control" placeholder="{{ 'Postal Code' | translate }}" ngControl="postalCode">
+					<input type="text" class="form-control" ngControl="postalCode">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid postal code length' | translate }}</small></label>
 			</div>
@@ -76,7 +76,7 @@
 			<div class="form-group">
 				<label>{{ 'Email' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
-					<input type="text" class="form-control" placeholder="{{ 'Email' | translate }}" ngControl="email">
+					<input type="text" class="form-control" ngControl="email">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
 			</div>
@@ -85,7 +85,7 @@
 			<div class="form-group">
 				<label>{{ 'Phone' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('phone')}">
-					<input type="text" class="form-control" placeholder="{{ 'Phone' | translate }}" ngControl="phone">
+					<input type="text" class="form-control" ngControl="phone">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid phone' | translate }}</small></label>
 			</div>
