--- a/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
@@ -6,7 +6,7 @@
 				<div class="col-xs-12 col-md-12 form-group" >
 					<label>{{ 'Hotel Name' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-						<input type="text" placeholder="{{ 'Name of the Hotel' | translate }}" class="form-control" ngControl="name"/>
+						<input type="text" class="form-control" ngControl="name"/>
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for your hotel' | translate }}</small></label>
 				</div>
@@ -25,7 +25,7 @@
 				<div class="col-xs-12 col-md-12 form-group">
 					<label>{{ 'Company Name' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('companyName')}">
-						<input type="text" placeholder="{{ 'Name of the Company' | translate }}" class="form-control" ngControl="companyName"/>
+						<input type="text" class="form-control" ngControl="companyName"/>
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for your company' | translate }}</small></label>
 				</div>
@@ -35,21 +35,21 @@
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'Address' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('streetAddress')}">
-						<input type="text" placeholder="{{ 'Address' | translate }}" class="form-control" ngControl="streetAddress">
+						<input type="text" class="form-control" ngControl="streetAddress">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the address' | translate }}</small></label>
 				</div>
 				<div class="col-xs-6 col-md-3 form-group">
 					<label>{{ 'City' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('city')}">
-						<input type="text" placeholder="{{ 'City' | translate }}" class="form-control" ngControl="city">
+						<input type="text" class="form-control" ngControl="city">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the city' | translate }}</small></label>
 				</div>
 				<div class="col-xs-6 col-md-3 form-group">
 					<label>{{ 'Postal Code' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('postalCode')}">
-						<input type="text" placeholder="{{ 'Postal Code' | translate }}" class="form-control" ngControl="postalCode">
+						<input type="text" class="form-control" ngControl="postalCode">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter the postal code' | translate }}</small></label>
 				</div>
@@ -61,14 +61,14 @@
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'Phone' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('phone')}">
-						<input type="text" placeholder="{{ 'Phone' | translate }}" class="form-control" ngControl="phone">
+						<input type="text" class="form-control" ngControl="phone">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid phone' | translate }}</small></label>
 				</div>
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'Fax' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('fax')}">
-						<input type="text" placeholder="{{ 'Fax' | translate }}" class="form-control" ngControl="fax">
+						<input type="text" class="form-control" ngControl="fax">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid fax' | translate }}</small></label>
 				</div>
@@ -77,7 +77,7 @@
 				<div class="col-xs-12 col-md-12 form-group">
 					<label>{{ 'Contact Person' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('contactName')}">
-						<input type="text" placeholder="{{ 'Contact Person\'s Name' | translate }}" class="form-control" ngControl="contactName"/>
+						<input type="text" class="form-control" ngControl="contactName"/>
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a contact name' | translate }}</small></label>
 				</div>
@@ -87,14 +87,14 @@
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'Website' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('websiteUrl')}">
-						<input type="text" class="form-control" placeholder="{{ 'Your Website' | translate }}" ngControl="websiteUrl">
+						<input type="text" class="form-control" ngControl="websiteUrl">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid url' | translate }}</small></label>
 				</div>
 				<div class="col-xs-12 col-md-6 form-group">
 					<label>{{ 'Email' | translate }}</label>
 					<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
-						<input type="email" placeholder="{{ 'Contact Email' | translate }}" class="form-control" ngControl="email">
+						<input type="email" class="form-control" ngControl="email">
 					</div>
 					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid contact email' | translate }}</small></label>
 				</div>
