--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
@@ -3,24 +3,27 @@
 	<div class="col-md-8">
 		<div class="row">
 			<div class="col-md-12 col-xs-12 form-group">
+				<label>{{ 'Product Name' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-					<input type="text" class="form-control" placeholder="{{ 'Product Name' | translate }}" ngControl="name">
+					<input type="text" class="form-control" ngControl="name">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the product' | translate }}</small></label>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-6 col-xs-12 form-group">
+				<label>{{ 'Price Charged' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('price')}">
 					<span class="input-group-addon">{{ccy.nativeSymbol}}</span>
-					<input type="number" placeholder="{{ 'Price Charged' | translate }}" class="form-control" ngControl="price">
+					<input type="number" class="form-control" ngControl="price">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid price that will be charged' | translate }}</small></label>
 			</div>
 			<div class="col-md-6 col-xs-12 form-group">
+				<label>{{ 'Internal Cost' | translate }}</label>
 				<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('internalCost')}">
 					<span class="input-group-addon">{{ccy.nativeSymbol}}</span>
-					<input type="number" placeholder="{{ 'Internal Cost' | translate }}" class="form-control" ngControl="internalCost">
+					<input type="number" class="form-control" ngControl="internalCost">
 				</div>
 				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid price' | translate }}</small></label>
 			</div>
@@ -28,7 +31,7 @@
 		<hr>
 		<div class="row">
 			<div class="col-md-6 col-xs-12 form-group">
-				<label for="addoncat">{{ 'VAT' | translate }}</label>
+				<label>{{ 'VAT' | translate }}</label>
 				<br/>
 				<label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'The VAT is included in the price.' | translate }}</small></label>
 				<select class="form-control" [ngModel]="addOnProductVatId" (change)="didSelectTaxId($event.target.value)">
@@ -37,7 +40,7 @@
 				</select>
 			</div>
 			<div class="col-md-6 col-xs-12 form-group" *ngIf="showCategorySelector()">
-				<label for="addoncat">{{ 'Category' | translate }}</label>
+				<label>{{ 'Category' | translate }}</label>
 				<br/>
 				<div class="input-group" [ngClass]="{'form-warning': (!didSelectCategory() && didSubmitForm)}">
 					<label class="text-muted"><small><i class="fa fa-info-circle"></i> {{ 'The category of your add on product.' | translate }}</small></label>
@@ -51,7 +54,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12 col-xs-12 form-group">
-				<label for="notesproduct">{{ 'Notes' | translate }}</label>
+				<label>{{ 'Notes' | translate }}</label>
 				<textarea class="form-control" ngControl="notes"></textarea>
 			</div>
 		</div>
